# hse-2019-cpp-tasks

hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: Makefile
hw_02/include/: BoardTest.h  StdioBoardView.h  Test.h
hw_02/src/: Board.cpp  StdioBoardView.cpp
hw_02/tests/: BoardTest.cpp  Test.cpp  test.cpp
hw_03/: CMakeCache.txt  CMakeLists.txt  Makefile
hw_03/include/: CLI.h  Huffman.h  HuffmanArchiver.h
hw_03/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp
hw_03/test/: TestCLI.cpp  TestHuffmanArchiver.cpp  TestHuffmanNode.cpp
lab_01/: .goutputstream-KIEQ7Z
lab_02/include/: test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/include/: clist.h
lab_03/src/: main.c
lab_04/: Makefile
lab_04/src/: main.c  mergesort.c
lab_05/: out.txt
lab_05/include/: point_list.h
lab_05/src/: main.c  point_list.c
lab_09/: Makefile
lab_09/src/: matrix.cpp  shared_ptr.cpp
lab_10/src/: Figure.cpp  Rectangle.cpp  Scheme.cpp
lab_11/: Makefile
lab_11/include/: bin_manip.h  employees.h
lab_11/src/: bin_manip.cpp  employees.cpp  main.cpp
lab_12/include/: my_vector.h  my_vector_impl.h
lab_12/src/: main.cpp
lab_13/include/: my_array.h
lab_14/: CMakeLists.txt
lab_14/include/: MatrixException.h  matrix.h
lab_14/src/: MatrixException.cpp  main.cpp  matrix.cpp
lab_15/: CMakeLists.txt
lab_15/include/: linq.h
lab_18/: CMakeLists.txt
lab_18/include/: format.hpp
lab_18/src/: smoke_test.cpp
ushakova.alina/: algo2.tex
ushakova.alina/hw_01/: Makefile
ushakova.alina/hw_03/: cmake_install.cmake
ushakova.alina/lab_02/: Makefile
(+61 files in other folders)
